--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quis adipisci impedit voluptate ipsa repellendus deserunt aspernatur distinctio, dolorum repellat!</p>
                 </div>
                 <div class="absolute md:relative img-wrapper">
-                    <div class="img bg-gray-400"></div>
+                    <div class="img bg-gray-400 bg-cover bg-center w-[300px] h-[350px] bg-[url('/img/akwan.jpg')] object-cover"></div>
                     <div class="dots absolute" style="bottom:-15px;right:-15px;">
                         <div class="flex">
                             <div class="item h-[10px] w-[10px] bg-white m-px rounded-full"></div>
@@ -200,7 +200,7 @@
             <div class="h-full w-full flex items-center pb-[50px] md:pb-0">
                 <div class="flex w-full flex-col md:flex-row justify-evenly transition-all duration-200">
                     <h2 class="font-bold text-[75px] mb-5 md:hidden block">Profile</h2>
-                    <div class="bg-gray-400 min-h-[500px] max-h-[600px] md:w-[350px] w-full flex items-end">
+                    <div class="bg-gray-400 min-h-[500px] max-h-[600px] md:w-[350px] w-full flex items-end bg-cover bg-center w-[300px] h-[350px] bg-[url('/img/akwan.jpg')] object-cover">
                         <div class="dots absolute" style="top:120px;left:15px;">
                             <div class="flex">
                                 <div class="item bg-white w-[10px] h-[10px] m-px rounded-full"></div>
