--- a/index.html
+++ b/index.html
@@ -94,39 +94,8 @@
 
 <body class="bg-gray-800 text-white">
     <!-- Component Start -->
-    <div class="flex flex-col items-center w-16 h-screen overflow-hidden text-gray-400 bg-gray-700 fixed z-10">
-        <div class="flex flex-col items-center mt-3">
-            <a class="flex items-center justify-center w-12 h-12 mt-2 hover:bg-gray-600 hover:text-gray-300 transisiton duration-[250ms] ease-in-out" href="#home">
-                <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-				 	<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-				</svg>
-            </a>
-            <a class="flex items-center justify-center w-12 h-12 mt-2 hover:bg-gray-600 hover:text-gray-300 transisiton duration-[250ms] ease-in-out" href="#profile">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg>
-            </a>
-            <a class="flex items-center justify-center w-12 h-12 mt-2 hover:bg-gray-600 hover:text-gray-300 transisiton duration-[250ms] ease-in-out" href="#education">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path d="M12 14l9-5-9-5-9 5 9 5z" />
-                    <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
-                </svg>
-            </a>
-            <a class="flex items-center justify-center w-12 h-12 mt-2 hover:bg-gray-600 hover:text-gray-300 transisiton duration-[250ms] ease-in-out" href="#project">
-                <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
-				</svg>
-            </a>
-            <a class="flex items-center justify-center w-12 h-12 mt-2 hover:bg-gray-600 hover:text-gray-300 transisiton duration-[250ms] ease-in-out" href="#contact">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
-                </svg>
-            </a>
-        </div>
-    </div>
 
-    <div class="main-wrapper p-3 ml-[60px] overflow-hidden">
+    <div class="main-wrapper p-3 overflow-hidden">
         <!-- DOT SIDEBAR -->
         <div class="dot-sidebar flex items-center justify-end h-screen fixed z-10" style="right: 0;">
             <div class="mr-3 flex flex-col">
