--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <p>Web Developer</p>
                             </div>
                             <div class="my-3">
-                                <p>Have 2 months 1 year work experience</p>
+                                <p>Have 1 year 2 months work experience</p>
                                 <p>Have created more than 6 projects</p>
                             </div>
                             <div class="mb-2">
