--- a/public/index.html
+++ b/public/index.html
@@ -793,10 +793,10 @@
                     <div class="justify-center items-center md:flex md:h-3/4">
                         <div class="mx-auto max-w-7xl my-8 sm:min-w-[1000px]">
                             <div
-                                class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-3"
+                                class="show-item grid grid-cols-1 sm:grid-cols-2 gap-3 mb-3"
                             >
                                 <div
-                                    class="show-item group relative overflow-hidden bg-gray-400 w-full h-[400px] text-black max-sm:w-full max-sm:h-[300px]"
+                                    class="group relative overflow-hidden bg-gray-400 w-full h-[400px] text-black max-sm:w-full max-sm:h-[300px]"
                                 >
                                     <img
                                         src="img/projects (2).png"
@@ -828,10 +828,14 @@
                                                 E-Voting
                                             </h1>
                                             <p class="mb-3">
-                                                BKK 1 is an application made for
-                                                a final school project. It is
-                                                made with Laravel as the main
-                                                framework and PHP...
+                                                Looking for a hassle-free way to
+                                                conduct elections and gather
+                                                votes? Look no further than
+                                                e-Voting! It's your go-to online
+                                                voting platform designed to
+                                                simplify the voting process and
+                                                ensure fair and transparent
+                                                elections.
                                             </p>
                                             <h3 class="font-bold">
                                                 Created With:
@@ -928,7 +932,7 @@
                                 </div>
 
                                 <div
-                                    class="show-item group relative overflow-hidden bg-gray-400 w-full h-[400px] text-black max-sm:w-full max-sm:h-[300px]"
+                                    class="group relative overflow-hidden bg-gray-400 w-full h-[400px] text-black max-sm:w-full max-sm:h-[300px]"
                                 >
                                     <img
                                         src="img/projects (3).png"
@@ -960,11 +964,14 @@
                                                 QuraLearn
                                             </h1>
                                             <p class="mb-3">
-                                                Lorem ipsum dolor sit, amet
-                                                consectetur adipisicing elit.
-                                                Quam voluptatibus dignissimos
-                                                quia, ipsa quod odit inventore
-                                                aliquam expedita rerum...
+                                                Meet QuraLearn, your one-stop
+                                                destination for online Quran
+                                                learning! Whether you're a
+                                                beginner looking to dive into
+                                                the depths of the Quran or an
+                                                experienced learner seeking to
+                                                deepen your understanding,
+                                                QuraLearn has got you covered.
                                             </p>
                                             <h3 class="font-bold">
                                                 Created With:
