updating padding and margin

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="absolute md:relative img-wrapper">
                         <div
-                            class="img bg-gray-400 bg-cover bg-center w-[400px] h-[530px]"
+                            class="img bg-gray-400 bg-cover bg-center h-[530px] sm:w-[400px]"
                         >
                             <img
                                 src="img/akwan.jpg"
@@ -182,7 +182,9 @@
                     <div
                         class="flex w-full flex-col md:flex-row justify-evenly transition-all duration-200"
                     >
-                        <h2 class="font-bold text-7xl mb-5 md:hidden block">
+                        <h2
+                            class="font-bold text-6xl mb-5 sm:text-7xl md:hidden block"
+                        >
                             Profile
                         </h2>
                         <div
@@ -649,18 +651,20 @@
                 </div>
 
                 <div class="h-full relative">
-                    <h2 class="font-bold text-[75px] relative">
+                    <h2
+                        class="font-bold mt-4 relative text-6xl sm:mt-0 sm:text-[75px]"
+                    >
                         <span
-                            class="absolute text-[14px] opacity-60 left-[95px] top-[25px]"
+                            class="absolute text-[14px] opacity-60 left-[95px] top-14 sm:top-[25px]"
                             >✕✕✕</span
                         >Educations
                     </h2>
                     <div class="flex justify-center items-center h-5/6">
-                        <div class="edu-swiper swiper w-fit h-fit z-0">
+                        <div
+                            class="edu-swiper show-item swiper w-fit h-fit z-0"
+                        >
                             <div class="swiper-wrapper">
-                                <div
-                                    class="swiper-slide show-item edu-item w-fit"
-                                >
+                                <div class="swiper-slide edu-item w-fit">
                                     <!-- <div> -->
                                     <div
                                         class="img bg-cover bg-center w-[400px] h-[350px]"
@@ -685,9 +689,7 @@
                                     </div>
                                     <!-- </div> -->
                                 </div>
-                                <div
-                                    class="swiper-slide show-item edu-item w-fit"
-                                >
+                                <div class="swiper-slide edu-item w-fit">
                                     <!-- <div> -->
                                     <div
                                         class="img bg-cover bg-center w-[400px] h-[350px]"
@@ -783,7 +785,9 @@
                 </div>
 
                 <div class="h-full relative">
-                    <h2 class="font-bold text-[75px] relative">
+                    <h2
+                        class="font-bold text-6xl relative mt-5 sm:mt-0 sm:text-[75px]"
+                    >
                         <span
                             class="absolute text-[14px] opacity-60 left-[79px] bottom-3"
                             >✕✕✕</span
@@ -830,12 +834,7 @@
                                             <p class="mb-3">
                                                 Looking for a hassle-free way to
                                                 conduct elections and gather
-                                                votes? Look no further than
-                                                e-Voting! It's your go-to online
-                                                voting platform designed to
-                                                simplify the voting process and
-                                                ensure fair and transparent
-                                                elections.
+                                                votes? Look no...
                                             </p>
                                             <h3 class="font-bold">
                                                 Created With:
@@ -967,11 +966,7 @@
                                                 Meet QuraLearn, your one-stop
                                                 destination for online Quran
                                                 learning! Whether you're a
-                                                beginner looking to dive into
-                                                the depths of the Quran or an
-                                                experienced learner seeking to
-                                                deepen your understanding,
-                                                QuraLearn has got you covered.
+                                                beginner...
                                             </p>
                                             <h3 class="font-bold">
                                                 Created With:
@@ -1103,7 +1098,9 @@
 
                 <div class="grid h-full">
                     <div class="flex flex-col justify-center items-center">
-                        <h2 class="md:text-center font-bold text-[70px] -mb-5">
+                        <h2
+                            class="md:text-center font-bold text-5xl mt-5 sm:mt-0 sm:-mb-5 sm:text-[70px]"
+                        >
                             Get In Touch
                         </h2>
                         <p>Let's connect and create something amazing!</p>
