--- a/public/index.html
+++ b/public/index.html
@@ -1110,10 +1110,17 @@
                         <div
                             class="flex flex-col justify-start items-center my-5 sm:my-0"
                         >
-                            <div class="bg-gray-300 w-48 h-64 mb-3"></div>
+                            <div class="bg-gray-300 w-48 h-64 mb-3">
+                                <img
+                                    src="/public/img/cv.png"
+                                    alt="cv preview"
+                                    class="object-cover bg-no-repeat bg-center h-full w-full"
+                                />
+                            </div>
                             <a
+                                target="_blank"
                                 class="inline-block w-fit px-6 py-2.5 bg-white border-2 border-gray-800 text-gray-800 font-bold hover:bg-gray-700 hover:text-white hover:shadow-lg focus:bg-gray-700 focus:shadow-lg focus:outline-none focus:ring-2 focus:ring-gray-700 focus:ring-offset-2 focus:text-white active:bg-gray-800 active:shadow-lg active:text-white transition duration-150 ease-in-out"
-                                href="projects.html"
+                                href="https://drive.google.com/file/d/1WhRAFVYZJfYpvWSjDWIIf8MNAjXGt2fl/view?usp=sharing"
                             >
                                 Download CV
                             </a>
